--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
+  - docker build - t  testing-demo -f Dockerfile.dev .
 
